RESOLVED FIXED211179
REGRESSION: Double tap dispatches one click event on iOS 13.4 when it would dispatch two on iOS 13.3
https://bugs.webkit.org/show_bug.cgi?id=211179
Summary REGRESSION: Double tap dispatches one click event on iOS 13.4 when it would d...
Antoine Quint
Reported 2020-04-29 06:08:58 PDT
Filing this bug to track the discussion on React issue 17258 (https://github.com/facebook/react/issues/17258) and specifically comment https://github.com/facebook/react/issues/17258#issuecomment-620325096 which points to a CodePen (https://codepen.io/juliogcampos/pen/BzdjwY) showing an example where the behavior differs between iOS 13.3 and iOS 13.4. I tested this myself on iPhone 8.
Attachments
Patch (11.80 KB, patch)
2020-04-30 17:28 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-29 06:09:28 PDT
Antoine Quint
Comment 2 2020-04-29 06:24:59 PDT
On iOS 13.1: two taps = one click event On iOS 13.3: two taps = two click events On iOS 13.4: two taps = one click event I believe the iOS 13.3 behavior is the correct one. This sounds like bug 202006 is back :(
Antoine Quint
Comment 3 2020-04-29 07:37:33 PDT
This regressed with r253267, the fix for bug 204664.
Wenson Hsieh
Comment 4 2020-04-30 17:28:10 PDT
EWS
Comment 5 2020-04-30 20:01:13 PDT
Committed r260979: <https://trac.webkit.org/changeset/260979> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398127 [details].
juwagn
Comment 6 2020-05-06 13:13:01 PDT
Hi, my bug on iOS 3.4.1 was marked as possible dupe of this one. However by me it is about touchstart/touchend events, or pointerdown/pointerup, where by fast two touches sequence only one event gets fired instead sequential two. Also it is not about click event but could be potentially handle same point.
Note You need to log in before you can comment on or make changes to this bug.